package items;

public interface LongStringifiable {
    public String toLongString();
}
