package items;

public interface Stringifiable {
    public String toString();
}
